--- a/index.css
+++ b/index.css
@@ -514,6 +514,195 @@ ul, ol {
     }
 }
 
+@media (width <= 684px) {
+    .container_polka {
+        margin: 0 auto;
+        max-width: 684px;
+    }
+
+    .container_question {
+        margin: 0 auto;
+        max-width: 560px;
+    }
+
+    .container_photos {
+        margin: 0 auto;
+        max-width: 560px;
+    }
+
+    .container_articles {
+        margin: 0 auto;
+        max-width: 460px;
+    }
+
+    .container_baikal {
+        margin: 0 auto;
+        max-width: 684px;
+    }
+
+    .header {
+        margin-top: 16px;
+    }
+
+    .header img {
+        margin-left: 16px;
+        max-width: 142px;
+    }
+
+    .header_lang_list {
+        gap: 18px;
+        font-size: 18px;
+        line-height: 20px;
+        margin-right: 16px;
+    }
+
+    .first_s {
+        margin-top: 48px;
+    }
+
+    .first_s h1 {
+        font-size: 56px;
+        line-height: 66px;
+        max-width: 560px;
+    }
+
+    .first_s p {
+        font-size: 16px;
+        line-height: 20px;
+        margin-top: 16px;
+        max-width: 560px;
+    }
+
+    .first_s img {
+        margin-top: 40px;
+    }
+
+    .first_s span {
+        margin-left: 16px;
+    }
+
+    .second_s {
+        max-width: 560px;
+        margin-top: 64px;
+    }
+
+    .second_s h3 {
+        font-size: 38px;
+        line-height: 44px;
+    }
+
+    .second_s p {
+        margin-top: 40px;
+        font-size: 16px;
+    }
+
+    .second_s table{
+        margin-top: 34px;
+    }
+
+    .third_s {
+        margin-top: 64px;
+    }
+
+    .grid-container {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 12px;
+    }
+
+    .fourth_s {
+        margin-top: 76px;
+    }
+
+    .fourth_s p {
+        font-size: 16px;
+    }
+
+    .article-head {
+        flex-direction: column;
+        gap: 32px;
+    }
+
+    .article-head h2 {
+        width: 560px;
+        letter-spacing: 0;
+    }
+
+    .article-head-URl {
+        flex-direction: column;
+    }
+
+    .article-main {
+        flex-direction: column;
+        gap: 32px;
+    }
+
+    .article-text {
+        gap: 25px;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 460px;
+
+    }
+
+    .article-container {
+        gap: 32px;
+    }
+
+    .article-container img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        max-height: 460px;
+        max-width: 460px;
+    }
+
+    .fifth_s {
+        margin-top: 66px;
+        margin-bottom: 64px;
+    }
+
+    .img_text {
+        max-width: 560px;
+        gap: 16px;
+    }
+
+    .img_text h2 {
+        font-size: 42px;
+        line-height: 46px;
+    }
+
+    .img_text p {
+        font-size: 16px;
+        line-height: 18px;
+        max-width: 560px;
+    }
+
+    .fifth_s img{
+        max-width: 684px;
+    }
+
+    .footer {
+        flex-direction: column;
+        text-align: center;
+        margin-bottom: 24px;
+        margin-left: 16px;
+    }
+
+    .footer ul {
+        gap: 32px;
+        font-size: 24px;
+        line-height: 24px;
+    }
+
+    .footer span {
+        line-height: 14px;
+    }
+
+    .footer p {
+        margin-top: 48px;
+    }
+}
+
 @media (width <= 320px) {
 
     .container_polka {
